// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

class C0 { }
class C1 { m1() { return C0; } }
class C2 { m2() { return C1; } }
class C3 { m3() { return C2; } }
class C4 { m4() { return C3; } }

module.exports = C4;

=====================================output=====================================
// @flow

class C0 {}
class C1 {
  m1() {
    return C0;
  }
}
class C2 {
  m2() {
    return C1;
  }
}
class C3 {
  m3() {
    return C2;
  }
}
class C4 {
  m4() {
    return C3;
  }
}

module.exports = C4;

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

class C0 { }
class C1 { m1() { return C0; } }
class C2 { m2() { return C1; } }
class C3 { m3() { return C2; } }

module.exports = C3;

=====================================output=====================================
// @flow

class C0 {}
class C1 {
  m1() {
    return C0;
  }
}
class C2 {
  m2() {
    return C1;
  }
}
class C3 {
  m3() {
    return C2;
  }
}

module.exports = C3;

================================================================================
`;

exports[`c.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

class C0 { }
class C1 { m1() { return C0; } }
class C2 { m2() { return C1; } }

module.exports = C2;

=====================================output=====================================
// @flow

class C0 {}
class C1 {
  m1() {
    return C0;
  }
}
class C2 {
  m2() {
    return C1;
  }
}

module.exports = C2;

================================================================================
`;

exports[`d.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

class C0 { }
class C1 { m1() { return C0; } }

module.exports = C1;

=====================================output=====================================
// @flow

class C0 {}
class C1 {
  m1() {
    return C0;
  }
}

module.exports = C1;

================================================================================
`;

exports[`e.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

class C0 { }

module.exports = C0;

=====================================output=====================================
// @flow

class C0 {}

module.exports = C0;

================================================================================
`;
